src/test/c/accept/20-changeInstrument.msh
score myScore {
    {
        tempo 200;
        signature 6 / 8;
        piano {
            clef clefG;
            tabs myTabs {
                c(q) d(q) e(q) f(q) | g(q) a(q) b(q) c(q)
            }
        }
    }
    {
        tempo 200;
        signature 6 / 8;
        marimba {
            clef clefG;
            tabs myTabs {
                c(q) d(q) e(q) | g(q) a(q) b(q)
            }
        }
    }
}