src/test/c/reject/07-missingBraces.msh
score myScore {
        tempo 200;
        signature 4 / 4;
        piano {
            clef clefG;
            tabs myTabs {
                c(q) d(q) e(q) f(q) | g(q) a(q) b(q) c(q)
            }
        }
}
